# lab

./: .gitignore  README.md
ansible/bootstraping_k3s/: 0_apt_update_servers.yml  1_install_initial_libs.yml  2_disable_swap.yml  3_setup_ufw.yml  4_setup_k3s.yaml  5_test_bandwidth.yaml  hosts.yaml
argocd/: ingress.yaml
cert/: generating.md
dags/: 1brc.py  dbt_backblaze.py  dbt_form_silver_layer.py  reqs.txt  test.py
dags/custom_operator/: ducklake.py
dags/prod/: setup_s3_buckets.py
dags/tests/: assets_consumer_test.py  test.py
dbt/: dbt_project.yml  profiles.yml
dbt/backblaze_starrocks/: dbt_project.yml
dbt/models/: schema.yml
dgstr/: pyproject.toml
dgstr/src/dgstr/defs/dbt_ingest/: defs.yaml
docs/cert/: README.md
docs/grafana-dashboards/: airflow-traces.md  external.md
docs/longhorn/: README.md
docs/metrics-server/: README.md
docs/tailscale-operator/: README.md
infra/: lab_infrastructure_app.yaml
infra/airflow/: airflow_app.yaml  dockerfile  ingress.yaml  logs_pvc.yaml  values.yaml
infra/apps/: airflow_app.yaml  bytebase_app.yaml  cert_manager_app.yaml  click-house-operator_app.yaml  click_house_operator_app.yaml  clickhouse_app.yaml  clickhouse_operator_app.yaml  cnpg_operator_app.yaml  dagster_app.yaml  dwh_app.yaml  (+31 more)
notebooks/: reqs.txt
seaweed/: secret.yaml
seaweedfs/: ingress.yaml  seaweedfs_app.yaml  values.yaml
vault/: ingress.yaml  vault-app.yaml
vault-secrets-operator/: sa.yaml  va.yaml  vc.yaml  vso-app.yaml
web/: .gitignore  Caddyfile  deploy.fish  evidence.config.yaml  package-lock.json  package.json
(+338 files in other folders)
