[project]
name = "dgstr"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.13.12",
    "dagster-dbt>=0.29.12",
    "dagster-postgres==0.29.12",
    "dagster-k8s==0.29.12",
    "dbt-starrocks>=1.12.0",
]

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dgstr"
registry_modules = [
    "dgstr.components.*",
]


